# delivery-zome

./: Cargo.toml  README.md  package.json
crates/delivery/: Cargo.toml
crates/delivery/src/: call_delivery_zome.rs  dm_protocol.rs  inputs.rs  lib.rs  pack_item.rs  receive.rs  send_dm.rs  send_item.rs  signal_protocol.rs  unpack_item.rs  utils_parcel.rs
crates/delivery/src/callbacks/: commit.rs  init.rs  mod.rs
crates/delivery/src/callbacks/post_commit/: delivery_notice.rs  delivery_reply.rs  distribution.rs  mod.rs  parcel_chunk.rs  parcel_manifest.rs  parcel_received.rs  reply_received.rs
crates/delivery/src/functions/: check_manifest.rs  commit_parcel_manifest.rs  commit_pending_item.rs  distribute_parcel.rs  fetch_chunk.rs  fetch_parcel.rs  get_distribution_state.rs  get_notice.rs  get_notice_state.rs  get_state.rs  mod.rs  pub_enc_key.rs  query.rs  respond_to_notice.rs
crates/delivery_api/: Cargo.toml
crates/delivery_api/src/: lib.rs
crates/delivery_common/: Cargo.toml
crates/delivery_common/src/: dm_protocol.rs  lib.rs  pack_item.rs  post_commit.rs  send_item.rs
crates/delivery_coordinator/: Cargo.toml
crates/delivery_coordinator/src/: broadcast_gossip.rs  call_delivery_zome.rs  dm_protocol.rs  emit_gossip.rs  emit_signal.rs  lib.rs  pack_item.rs  receive.rs  send_dm.rs  send_item.rs  signal_protocol.rs  unpack_item.rs  utils_parcel.rs
crates/delivery_coordinator/src/callbacks/: commit.rs  genesis_self_check.rs  init.rs  mod.rs  recv_remote_signal.rs
crates/delivery_coordinator/src/callbacks/post_commit/: delivery_notice.rs  delivery_receipt.rs  delivery_reply.rs  distribution.rs  mod.rs  notice_ack.rs  notice_received.rs  notice_reply.rs  parcel_chunk.rs  parcel_manifest.rs  parcel_received.rs  pending_item.rs  private_chunk.rs  private_manifest.rs  public_chunk.rs  public_manifest.rs  public_parcel.rs  reception_ack.rs  reception_proof.rs  reply_ack.rs  reply_received.rs
crates/delivery_coordinator/src/functions/: broadcast_public_parcel_gossip.rs  check_manifest.rs  commit_chunks.rs  commit_parcel_chunk.rs  commit_parcel_manifest.rs  commit_pending_item.rs  commit_private_chunks.rs  commit_private_manifest.rs  complete_manifest.rs  determine_missing_chunks.rs  distribute_parcel.rs  fetch_chunk.rs  fetch_missing_chunks.rs  fetch_parcel.rs  fetch_public_manifest.rs  get_all_local_parcels.rs  get_all_manifests.rs  get_delivery_state.rs  get_distribution_state.rs  get_manifest.rs  get_notice.rs  get_notice_state.rs  mod.rs  notify_new_public_parcel.rs  notify_public_parcel.rs  process_inbox.rs  pub_enc_key.rs  publish_chunk.rs  publish_manifest.rs  publish_parcel.rs  publish_pending_item.rs  publish_public_parcel.rs  pull_inbox.rs  pull_parcel.rs  pull_public_parcels.rs  query.rs  query_all.rs  remove_public_parcel.rs  request_missing_chunks.rs  respond_to_notice.rs  (+4 more)
crates/delivery_coordinator/src/self_call/: check_manifest.rs  commit.rs  commit_received_chunks.rs  fetch_chunk.rs  fetch_parcel.rs  link_public_parcel.rs  mod.rs  pull_chunk.rs
crates/delivery_integrity/: Cargo.toml
crates/delivery_integrity/src/: entry_types.rs  lib.rs  link_kind.rs  pub_enc_key.rs  validate.rs  validate_app_entry.rs  validate_link.rs
crates/delivery_types/: Cargo.toml
crates/delivery_types/src/: constants.rs  delivery.rs  entry_types.rs  gossip_protocol.rs  inputs.rs  lib.rs  properties.rs  signal_protocol.rs  tip_protocol.rs
crates/delivery_zome_api/: Cargo.toml
crates/delivery_zome_api/src/: entry_kind.rs  parcel.rs
crates/proc_macro/: Cargo.toml
crates/proc_macro/src/: lib.rs
crates/types/: Cargo.toml
crates/types/src/: callbacks.rs  commit_parcel.rs  delivery.rs  entries.rs  entry_kind.rs  inputs.rs  lib.rs  parcel.rs  signal_protocol.rs  utils_parcel.rs  zfn_inputs.rs
crates/types/src/entries/: delivery_notice.rs  delivery_reply.rs  distribution.rs  parcel_chunk.rs  parcel_manifest.rs  parcel_received.rs  pending_item.rs  pub_enc_key.rs  reply_received.rs
crates/zome/: Cargo.toml
crates/zome-utils/: Cargo.toml
crates/zome-utils/src/: lib.rs  query.rs
crates/zome/src/: constants.rs  dm_protocol.rs  entry_kind.rs  lib.rs  link_kind.rs  receive.rs  receive_dm.rs  send_dm.rs  send_item.rs  signal_protocol.rs  utils.rs  utils_delivery.rs  utils_parcel.rs  zome_entry_kind.rs  zome_entry_trait.rs
crates/zome/src/callbacks/: entry_defs.rs  init.rs  mod.rs  post_commit.rs  validate_entry.rs  validate_link.rs  validate_package.rs
crates/zome/src/entries/: delivery_notice.rs  delivery_reply.rs  distribution.rs  mod.rs  parcel_chunk.rs  parcel_manifest.rs  parcel_received.rs  reply_received.rs
crates/zome/src/functions/: check_manifest.rs  commit_parcel_chunk.rs  commit_parcel_manifest.rs  commit_pending_item.rs  commit_pub_enc_key.rs  distribute_parcel.rs  fetch_chunk.rs  fetch_parcel.rs  get_notice.rs  get_state.rs  mod.rs  pack_item.rs  pub_enc_key.rs  pull_inbox.rs  query.rs  respond_to_notice.rs  unpack_item.rs
dna.workdir/: dna.yaml  happ.yaml
example_dna/dna/: dna.yaml
example_dna/zomes/secret/: Cargo.toml
example_dna/zomes/secret/src/: lib.rs
example_dna/zomes/secret_integrity/: Cargo.toml
playground/webapp/: index.html  package.json  rollup.config.js  tsconfig.json  web-dev-server.config.mjs
playground/webapp/src/: app.ts  index.ts
playground/workdir/: dna.yaml  happ.yaml
playground/zomes/agent_directory/: Cargo.toml
playground/zomes/agent_directory_integrity/: Cargo.toml
playground/zomes/secret/: Cargo.toml
playground/zomes/secret/src/: callbacks.rs  lib.rs  send_secret.rs
scripts/: clean.sh  install-submodules.sh  pack-happ.bat  pack-happ.sh  ts-bindings.sh
sweettest/: Cargo.toml
sweettest/src/: main.rs  print.rs  secret_agent.rs  setup.rs  test.rs  test_delivery.rs  test_multiple.rs  test_pending.rs
test_dna/dna/: dna.yaml  happ.yaml
test_dna/zomes/secret/: Cargo.toml
webcomponents/: package.json  tsconfig.json
webcomponents/src/: index.ts  utils.ts
webcomponents/src/bindings/: delivery.fn.ts  delivery.integrity.ts  delivery.proxy.ts  delivery.types.ts  (+1 more)
zomes/delivery/: Cargo.toml
(+98 files in other folders)
