[workspace]
resolver = "2"
members = [
  "crates/delivery_types",
  "crates/delivery_integrity",
  "crates/delivery",
  "crates/delivery_api",
  "playground/zomes/secret_integrity",
  "playground/zomes/secret",
  "playground/zomes/agent_directory",
  "playground/zomes/agent_directory_integrity",
  #"sweettest",
]

[workspace.package]
version = "0.1.0"
rust-version = "1.65.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1.0", default-features = false }
hdi = { version = "=0.2.1", default-features = false }
hdk = { version = "=0.1.1", default-features = false }
holochain_integrity_types = { version = "=0.1.1" } # needed because of broken deps in hdk-1.1

zome_utils = { git = "https://github.com/ddd-mtl/zome-utils", branch = "hdk-1.1" }


[profile.dev]
lto = false
opt-level = 0
overflow-checks = false

[profile.release.package.delivery_sweettest]
opt-level = 0
overflow-checks = false

[profile.release]
opt-level = "z"
lto = true # link time optimization

[profile.release.build-override]
opt-level = "z"
