[workspace]
resolver = "2"
members = [
  "crates/delivery_types",
  "crates/delivery_integrity",
  "crates/delivery_coordinator",
  "crates/delivery_api",
  "playground/zomes/secret_integrity",
  "playground/zomes/secret",
  "playground/zomes/agent_directory",
  "playground/zomes/agent_directory_integrity",
  #"sweettest",
]

[workspace.package]
version = "0.1.0"
rust-version = "1.73.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "=1.0.197", default-features = false }
hdi = { version = "=0.4.0-beta-dev.36", default-features = false }
hdk = { version = "=0.3.0-beta-dev.41", default-features = false }

zome_utils = { git = "https://github.com/ddd-mtl/zome-utils", branch = "hdk-3.0" }


[profile.dev]
lto = false
opt-level = 0
overflow-checks = false

[profile.release.package.delivery_sweettest]
opt-level = 0
overflow-checks = false

[profile.release]
opt-level = "z"
lto = true # link time optimization

[profile.release.build-override]
opt-level = "z"
