[workspace]
resolver = "2"
members = [
  "crates/delivery_types",
  "crates/delivery_integrity",
  "crates/delivery_coordinator",
  "crates/delivery_api",
  "playground/zomes/secret_integrity",
  "playground/zomes/secret",
  "playground/zomes/agent_directory",
  "playground/zomes/agent_directory_integrity",
  #"sweettest",
]

[workspace.package]
version = "0.1.0"
rust-version = "1.75.0"
edition = "2021"

[workspace.lints.rust]
non_upper_case_globals = "allow"
unused_doc_comments = "allow"
non_camel_case_types = "allow"
non_snake_case = "allow"
unused_attributes = "allow"
ill_formed_attribute_input = "allow"

[workspace.dependencies]
serde = { version = "=1.0.203", default-features = false }
hdi = { version = "=0.5.0-rc.1", default-features = false }
hdk = { version = "=0.4.0-rc.1", default-features = false }

zome_utils = { git = "https://github.com/ddd-mtl/zome-utils", branch = "hdk-4.0-dev.20" }
zome_signals = { git = "https://github.com/ddd-mtl/zome-signals", branch = "hdk-4.0-dev.20" }


[profile.dev]
lto = false
opt-level = 0
overflow-checks = false

[profile.release.package.delivery_sweettest]
opt-level = 0
overflow-checks = false

[profile.release]
opt-level = "z"
lto = true # link time optimization

[profile.release.build-override]
opt-level = "z"
