[package]
name = "delivery_sweettest"
version = "0.0.1"
edition = "2018"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
serde = { version = "1.0", default-features = false }
colored = { version = "2.0", default-features = false }
futures = { version = "0.3", default-features = false }
tokio = { version = "1.3", features = [ "full" ] }
maplit = { version = "1", default-features = false }

holochain = { version = "0.0.126", default-features = false, features = ["test_utils"]  }
holochain_zome_types = { version = "0.0.24", default-features = false }
holochain_state = { version = "0.0.26", default-features = false }
holochain_p2p = { version = "0.0.26", default-features = false }
holo_hash = { version = "0.0.19", default-features = false, features = ["encoding"] }

zome_delivery_types = { path = "../crates/types", default-features = false }
zome_secret = { path = "../example_dna/zomes/secret", default-features = false }