[package]
name = "delivery_sweettest"
version = "0.0.1"
edition = "2021"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.3", features = [ "full" ] }
maplit = { version = "1", default-features = false }
serde = { version = "1.0", default-features = false }

futures = { version = "0.3.1", default-features = false }
stream-cancel = "0.8.0"

holochain_types = "0.0.26"
holochain = { version = "0.0.126", default-features = false, features = ["test_utils"]  }
holochain_zome_types = { version = "0.0.24", default-features = false }
holo_hash = { version = "0.0.19", default-features = false, features = ["encoding"] }

sweettest_utils = { git = "https://github.com/ddd-mtl/sweettest-utils" }

zome_delivery_types = { path = "../crates/types", default-features = false }
zome_secret = { path = "../example_dna/zomes/secret", default-features = false }