[package]
name = "zome_delivery"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[lib]
crate-type = [ "cdylib", "rlib" ]

[dependencies]
strum = "0.24"
strum_macros = "0.24"
enum-ordinalize =  "3.1"
bincode = "1.3"

serde.workspace = true
hdk.workspace = true
zome_utils.workspace = true

zome_delivery_types = { path = "../delivery_types" }
zome_delivery_integrity = { path = "../delivery_integrity" }

