[package]
name = "zome_delivery_api"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[lib]
crate-type = [ "cdylib", "rlib" ]

[lints]
workspace = true

[dependencies]
bincode = "1.3"

serde.workspace = true
hdk.workspace = true
zome_utils.workspace = true
zome_signals.workspace = true

zome_delivery_types = { path = "../delivery_types" }
