[package]
name = "zome_delivery_coordinator"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[lib]
crate-type = [ "cdylib", "rlib" ]

[dependencies]
bincode = "1.3"

serde.workspace = true
hdk.workspace = true
zome_utils.workspace = true

zome_delivery_types = { path = "../delivery_types" }
zome_delivery_integrity = { path = "../delivery_integrity" }
zome_delivery_common = { path = "../delivery_common" }

