[package]
name = "zome_delivery_types"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

# Ensure that this is not inside of any other workspace.
# This crate should be an implementation detail of test_utils_wasm and
# therefore shouldn't be mentioned in the top-level Cargo.toml
#[workspace]

[lib]
crate-type = [ "cdylib", "rlib" ]

[lints]
workspace = true

[dependencies]
serde.workspace = true
hdi.workspace = true
