[package]
name = "zome_delivery_types"
version = "0.0.1"
edition = "2018"

# Ensure that this is not inside of any other workspace.
# This crate should be an implementation detail of test_utils_wasm and
# therefore shouldn't be mentioned in the top-level Cargo.toml
#[workspace]

[lib]
name = "zome_delivery_types"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
serde = { version = "1.0", default-features = false }

hdk = { version = "0.0.122", default-features = false }
