[package]
name = "zome_delivery"
version = "0.0.1"
edition = "2018"

# Ensure that this is not inside of any other workspace.
# This crate should be an implementation detail of test_utils_wasm and
# therefore shouldn't be mentioned in the top-level Cargo.toml
#[workspace]

[lib]
name = "zome_delivery"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
serde = { version = "1.0", default-features = false }
strum = "0.24"
strum_macros = "0.24"
enum-ordinalize =  "3.1"
bincode = "1.3"

hdk = { version = "0.0.122", default-features = false }

zome_utils = { path = "../zome-utils" }
zome_delivery_types = { path = "../types" }
