[package]
name = "zome_secret"
version = "0.0.1"
edition = "2021"

[lib]
name = "secret"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
serde = { version = "1.0", default-features = false }

hdk = { version = "0.0.122", default-features = false }

zome_utils = { git = "https://github.com/ddd-mtl/zome-utils", branch = "122" }
zome_delivery_types = {path = "../../../crates/types" }