[package]
name = "zome_secret"
version.workspace = true
rust-version.workspace = true
edition.workspace = true

[lib]
crate-type = [ "cdylib", "rlib" ]

[dependencies]
serde.workspace = true
hdk.workspace = true

zome_utils.workspace = true

zome_delivery_types = {path = "../../../crates/delivery_types" }
zome_delivery_api = { path = "../../../crates/delivery_api" }

zome_secret_integrity = {path = "../secret_integrity" }
